--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bulma": "^0.9.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-collapsible": "^2.8.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
